--- a/.github/workflows/zapbasic.yml
+++ b/.github/workflows/zapbasic.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ZapScan
 
 on:
   workflow_dispatch:
@@ -9,6 +9,6 @@ jobs:
 
     steps:
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.4.0
+        uses: zaproxy/action-full-scan@v0.2.0
         with:
           target: 'http://demovideo-dev.eba-5etrpdsa.us-east-2.elasticbeanstalk.com'
